# pyslice

./: .gitignore  Cargo.toml  README.md  init_project.sh  pyproject.toml  requirements.in  requirements.txt  run.sh  test_stl.py
src/: boundingbox.rs  lib.rs  run.sh
