[package]
name = "pyslice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyslice"
crate-type = ["cdylib"]

[dependencies]
image = "0.24.6"
pyo3 = "0.18.1"
stl = "0.2.1"
stl_io = "0.7.0"
threadpool = "1.8.1"
